# d4descent

./: .gitignore  >  ANALYSIS.md  README.md  pyproject.toml
configs/: arclines_topopt.yaml  sds_600.yaml
configs/losses/: raster.yaml  sds.yaml  topopt96.yaml
configs/tasks/: arclines.yaml  trees.yaml  tri.yaml  ur.yaml
data/arclines/: bench128.shc  donut25.shc  twocomp23.shc
docs/: custom_grammar_api.md  perf_improvements.md  pytorch_reference.md
runs/: _rungen_arclines.py  _rungen_arclines_pngs.py  _rungen_arclines_prompts.py  _rungen_arclines_topopt.py  _rungen_trees.py  _rungen_trees_pngs.py  _rungen_tri.py  _rungen_ur.py  _rungen_ur_pngs.py  _rungen_ur_prompts.py
scripts/: optimize_pngs.py  optimize_prompts.py  optimize_shc.py  optimize_shc_interp.py
src/d4descent/: __init__.py  context.py  metrics.py  object_collection.py  optimizer.py  scheduler.py  types.py  util.py  visualizer.py
src/d4descent/losses/: _base.py  raster.py  sds.py  topopt.py
src/d4descent/objects/: arclines.py  csgb.py  prim2.py  tree.py  tree2.py  tri.py  ur.py
src/d4descent/tasks/: _base.py  arclines.py  csgb.py  tree.py  tri.py  ur.py
