[project]
name = "d4descent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Milin Kodnongbua", email = "mil.millin@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "confify",
    "diffusers>=0.35.1",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.7",
    "kornia>=0.8.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "scikit-video>=1.1.11",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
confify = { git = "https://github.com/milmillin/confify.git" }
